tests/ascribe-15/out.txt
error: mismatched types: expected t, found t
   ┌─ err.sml:23:9
   │
23 │ val _ = A.bar B.foo
   │         ^^^^^^^^^^^

typechecking failed
